--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+:root{
+  --primary-color: ; 
+  --secondary-color:; 
+  --border-color: grey; 
+  --font-size: 30px; 
+  --background-color-operator: #9ba3a3; 
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +18,106 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10vh;
+}
+
+.Container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 400x;
+  font-size: var(--font-size);
+  --border-radius: 10px;
+  --border-width: 4px;
+}
+
+.Result{
+  background-color:  #bac1c1 ;
+  width: 100%;
+  height: auto;
+  min-height: 100px;
+  border: solid var(--border-width) var(--border-color);
+  border-top-left-radius: var(--border-radius);
+  border-top-right-radius: var(--border-radius);
+  color:  black;
+  /* text-align: right; */
+}
+
+
+.Operators1{
+  background-color: var(--background-color-operator);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  height: max-content;
+  border-left: solid var(--border-width) var(--border-color);
+  border-right: solid var(--border-width) var(--border-color);
+
+}
+
+.Calculatrice{
+  background-color:  #bac1c1 ;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-around;
+  width: 100%;
+  border: solid var(--border-width) var(--border-color);
+  border-bottom-left-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+}
+
+.Numbers{
+  flex-grow: 1;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  gap: 1%;
+}
+
+.Operators2{
+  display: flex;
+  flex-direction: column;
+  width: 20%;
+  background-color: var(--background-color-operator);
+  border-left: solid var(--border-width) var(--border-color);
+}
+
+.Number{
+  width: 25%;
+  background-color:  #e9b21c;  ;
+  border: solid 1px black; 
+  border-radius: 50%;
+  text-align: center;
+  color: black;
+}
+
+.Number:hover{
+  cursor: pointer;
+  background-color: #e9b21c;
+  opacity: 0.5;
+  color: white; 
+}
+
+.Operator{
+  margin:auto;
+  padding: 10%;
+
+}
+
+
+.Operator:hover{
+  opacity: 0.5;
+  color: white; 
+  cursor: pointer;
 }
