--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ code {
   height: 400x;
   font-size: var(--font-size);
   --border-radius: 10px;
-  --border-width: 4px;
+  --border-width: 1.5px;
 }
 
 .Result{
@@ -82,7 +82,7 @@ code {
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  gap: 1%;
+  gap: 5%;
 }
 
 .Operators2{
@@ -95,6 +95,7 @@ code {
 
 .Number{
   width: 25%;
+  height: 50px;
   background-color:  #e9b21c;  ;
   border: solid 1px black; 
   border-radius: 50%;
